--- a/public/exercise.html
+++ b/public/exercise.html
@@ -83,6 +83,8 @@
     Workout Added Successfully!
   </div>
   <script src="/api.js"></script>
+  <!-- Add workout.js reference -->
+  <script src="/workout.js"></script>
   <script src="/exercise.js"></script>
 </body>
 
