--- a/public/stats.html
+++ b/public/stats.html
@@ -31,6 +31,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.0/dist/chart.min.js"></script>
     <script src="/api.js"></script>
+     <!-- Add workout.js reference -->
+    <script src="workout.js"></script>
     <script src="/stats.js"></script>
   </body>
 </html>
